# ChangeLog for dev-lisp/sbcl
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lisp/sbcl/ChangeLog,v 1.216 2015/02/01 01:46:12 gienah Exp $

  01 Feb 2015; Mark Wright <gienah@gentoo.org>
  +files/sbcl-1.0.55-newglibc.patch, sbcl-1.0.55-r1.ebuild:
  Fix Bug 463882 - dev-lisp/sbcl-1.0.55-r1 - x86-64-linux-os.c:93:1: error:
  REG_RAX undeclared (first use in this function). Thanks to Bernardo Costa for
  reporting, Coacher for supplying the pointer to the patch from upstream that
  is applied to fix the problem, Juergen Rose and Guenther Brunthaler for
  supplying build logs, Vasiliy, Nuno Silva, patrick, blueboar, jer, pchrist and
  tomwij for helping. Apply fix for Bug 526194 - dev-lisp/sbcl-1.2.4 does not
  respect CFLAGS and LDFLAGS to sbcl-1.0.55-r1

  31 Jan 2015; Mark Wright <gienah@gentoo.org>
  +files/sbcl-1.2.7-verbose-build.patch, sbcl-1.2.7.ebuild:
  Fix Bug 526194 - dev-lisp/sbcl-1.2.4 does not respect CFLAGS and LDFLAGS for
  sbcl 1.2.7. Add arm, sparc solaris and x64 solaris binaries to SRC_URI,
  untested and no KEYWORDS as I do not have access to this hardware. Add
  sbcl-1.2.7-verbose-build.patch to echo commands executed by shell scripts
  during the build.

  09 Jan 2015; redlizard <redlizard@gentoo.org> sbcl-1.2.7.ebuild:
  Added prefix keywords and fixes.

*sbcl-1.2.7 (09 Jan 2015)

  09 Jan 2015; Mark Wright <gienah@gentoo.org>
  +files/bsd-sockets-test-1.2.7.patch, +files/sbcl-1.0.6-solaris.patch,
  +sbcl-1.2.7.ebuild:
  Bump sbcl to 1.2.7. Add Gentoo prefix support, thanks to Ruud Koolen
  (redlizard) for helping and testing ~amd64-linux, and jcdx for testing
  ~x64-macos.

  22 Dec 2014; Andrey Grozin <grozin@gentoo.org>
  +files/concurrency-test-1.2.6.patch:
  Adding a missing patch (#533158)

*sbcl-1.2.6 (20 Dec 2014)

  20 Dec 2014; Andrey Grozin <grozin@gentoo.org> +sbcl-1.2.6.ebuild,
  +files/bsd-sockets-test-1.2.6.patch:
  Version bump

*sbcl-1.2.4 (20 Oct 2014)
