@@ -43,19 +43,19 @@ DIST sbcl-1.2.7-x86-64-solaris-binary.tar.bz2 10438955 SHA256 a0a13e83b35dbac362
 DIST sbcl-1.2.7-x86-linux-binary.tar.bz2 10516485 SHA256 724425fe0d28747c7d31c6655e39fa8c27f9ef4608c482ecc60089bcc85fc31d SHA512 ca09beeafeb40f21eb1a377f04a69d57feb5549fa63aadf2e39aa65f3875418bdab755e22b567b3f2c514fb94534b739a57606288912ffc5cddf370a400e9e5c WHIRLPOOL 41b3f5a9749c74f136b8bb4f519409902045cd9501b5b944e7bcbf9336dd6640388641d26f8c345d79a1028ae64bb04fb74228886f8c2ae0eb085a8586635e17
 DIST sbcl-1.2.7-x86-solaris-binary.tar.bz2 10351529 SHA256 a198df14f45cdf302017116744c8946a8b4143291efe1799553554133c22b46a SHA512 b30d40f0095bb43719ba2e1a619f53fe5f0bccaa08a35481bc5feeb0dd5b540018a9ec9f61799de89991a85750577922cb4e56db4d7dab8f07e18bbc643bdad1 WHIRLPOOL 05ad3606b23e6196d443328f367b7351612d0f4991d71a5a04f1f45b5bb604809d6ed11c8cf62bc639d6f9dd8e5704b52a050603d4745713c5818fcbd36852bf
 EBUILD sbcl-1.0.55-r1.ebuild 6376 SHA256 1a199d3b3ba3d64cd2c920f2a106b25eaf10df9cd3bf32e6e8087b2eb005d017 SHA512 ae2053590619769cfa08c5eb62bc08fd639246ed5df6ce9b916ddc536cce7d82b65b59a0d4607220d930aa049ba931c051f7e07358e1e0835f400b65187076a7 WHIRLPOOL 7d3d4acbfcc0be134d19d922ebeb4610d555c0153fd9363d135c08a591f599ec89b2b8aeabbb9845be8b42425b5d109151c14526525b78734159077ae7a56384
-EBUILD sbcl-1.1.18.ebuild 6963 SHA256 b6977411bdadb9057d185ebea9a4ee5b2b7ff19d54c2ca838e3e9a0659412c89 SHA512 bbf22ab9402f65c92657c797c2820ea027d72bef71438c697cd949364421dc78be18687d1c0bb9bdf70538310e55f185fdc83fcbd4578f3832ee56c1253aea31 WHIRLPOOL cb4da2691ef3643a8c19fa357ea5fb52668c664a366f5e618bc7715b63cca41ca9e74bef0852d8a2e203a35b5079e58e0010bb3c87912e85fe0074792cc02028
-EBUILD sbcl-1.2.2.ebuild 6976 SHA256 a10e756c7b49c4e68f7ec836016e8a2a689bbf32067da5546b200abcb991b107 SHA512 f7213131256d3715137daa07bc067400f02f6e2296e210c57d8c28622b8c83bce25689e6316366ae0c79f811df65ab3af7f33f85355126b29babda6324ca2e12 WHIRLPOOL d4e8b251fe028c7488ca186826307e4fa79a07126aa9f2421a8489e63bf0cd2200a7ec2dbc21dda884236c90e9daf4c302641275c4027c8b584e6cc8d0b19fd2
-EBUILD sbcl-1.2.4.ebuild 6976 SHA256 658bc0c6080c6d0ddd2e32121ff2fa5f0dc7ff0152e7ce3ddc5eac323a1e0a8f SHA512 5e6ac63fefe0b2ea6cda9d610e26d99e06b4537e9e8f508ef89d180c919087841f8fb75481d8e92da9a659237c54fd5640f5c61ecafbd651b41f680c78b39def WHIRLPOOL 803c875ed620f58428446ae96ec59eba3ad9dbf8983c23ca455bd67e78534274da22667fd6eac67c98a8bb357f6c1dbaa971414b851ae625e676ae85620427b6
+EBUILD sbcl-1.1.18.ebuild 7105 SHA256 b3c8d6ed75fa025a496e0c3b47c2c8a24f148a7b924d1fc43383c8fe1efb85c6 SHA512 829317a9633af28162eb8c86a82fb9375ccd5e692cc8f131cda2bcb5f83083caf00af43f9166b0accbb47c4cb3a3c3e7b0f3bdabdf976198f72dd3134fde2ac7 WHIRLPOOL 56a1adc25a6fade22a09dc2b5d7afe44856ff864da97173f44793fc061685caff593e91250a49490471d974dd3e34f19fd2efa34537123923a2cd4d771632b9a
+EBUILD sbcl-1.2.2.ebuild 7118 SHA256 c4e8ff0834201417f943d544f1403d0e24b2939727c329e06e3cc47695401598 SHA512 81ea5b05d6c91892b23e28c58131d345f31592cd7054190774ecfbec0bd5e94bc410dbb22946fe488b6de0e28e28f598ed1c9756e6f1abcd5e8b4b61b06faa90 WHIRLPOOL 10e434ab3a0dae5bd5ad19073b2498a0e719c91b1da4fbd0f217530308726ce1c8905e9f7619c525176e7ccffef386b1aef9aac3d57b33a53e699886b7f34304
+EBUILD sbcl-1.2.4.ebuild 7118 SHA256 5e63ce3b3ad06b68ce942d174c259a14d34d4e3b037f0caadce2105ae7f8b611 SHA512 b165ed71c77537bd0b24183511f21dd903d72c31d374997bb065fb2381dcfb560bf46fd87cd5ac8001f7581023313cd2f6c339b17c4dff73643a4235bb844cc4 WHIRLPOOL 3b413bf6c1d832551cb091790effa184d11dffbc797d32fd28b760489835550e3c98bc16348b2e7abd3e2b3da414ede72fb8dc587ab332b43e5220559c1b020a
 EBUILD sbcl-1.2.6.ebuild 6890 SHA256 7225e7405718576b49c79817a64c897bc7dc1926606d088d20883bf4c37d15aa SHA512 c4759650831c7d7556414eab8e683460345d61bd14c4ac8bfcc6c127ac8f1f8f0ed83fb0168149c2f454787a956145c20384b2177ad72a54e4172ac2a48448f9 WHIRLPOOL 4970001c7f0a08dfcf6e6c7e605f9728f191e130a6d5333334bef3009305c48b919cffcd9a570ddac5bfbce80d1c8ff2ad3348d0efef8d42083370be7a3e465c
 EBUILD sbcl-1.2.7.ebuild 8338 SHA256 5fade7c611130e0313ab1402d10ae8775a43952b96744dfa622ffc2fc4786ebb SHA512 b18016c8931612d2dc84efd8b0ea637f8ec2a83e888abf3d323fcb40f6a7ea5da0964009f953932cf6f66a5d44235e2dc237853ec1c48d41a5632df280c62159 WHIRLPOOL 49ecaf3b026801873593ea38092d33b98caf08bf7f3db1693638b2af098b68ae1c2242e4aab6dc369541486157a905972348b4102477d829d608a7bd20fb7619
-MISC ChangeLog 57581 SHA256 a32536d0ec18b0bab4749c5a2d33b9ac5843cb720e0b5c4d593b86fade3dcaa0 SHA512 8421670ef3985a3fed42b880592f0aebd3f41279be53725a44533ca3887c5175696455af256978e8b0d846324fcb8cfb7679813819d8eb06d0d58f19296ac748 WHIRLPOOL 6af64c6b0f54fd7001a023c00d7918566cd4bb207a6594205f8607a39b45cc67d80a6473f2e32db71fe802f329dcd9a3bf050b71e4ed82e28c47d99d82dd94bc
+MISC ChangeLog 57829 SHA256 7f77019edbe5a6fec564c8cc42cc2666000f26511864fa299a35efffa08f61e1 SHA512 de9e9e469de6c56e6961efe06e37be618eab85094e92bff8d42e19843a58a0e3c0326f7ec333368edb595a4b6b3263915ec77667938dbd65cdad5d9fb4e4c6ec WHIRLPOOL 5e51b6cfd2cbc24c5e3be8a38d897e8ab58ab0ee2b5678916ad4b1d9c20c965b7fb6b5264e765e891c6bd19f0aaef58698f46485b7681a7ea7d00f998d4b7525
 MISC metadata.xml 1676 SHA256 17fb0c325844368c649a311f15fbb53a87e5ef987021c52424ffa647745101f3 SHA512 54f12b8385602a6f26b35bb63cbfb0414788e899bc2f5240f60ce249d8ac914c1e236b8d66cee893eac1c3602661869a4333223fa4ce043bd284bde51fa99512 WHIRLPOOL 90a7306f698aa56ab618874f1d325bd3bb789961675d4b0728744abff152bfb6e8cb7303c3cc063782e0411ce27551527c313b404846dadbe2638c5ea086e2f1
 MISC sbcl-1.0.55-r1.ebuild.orig 6161 SHA256 764c48efc217326b8a9862bcc4589df7c2e1ba2b164937a6c008bf7850f383fd SHA512 ff9c03ce7aa6f523efd4e4b6b41639cdafc45fa242dfabe59ef8c5d428bb9a6025b44420663ea38fdfc110b2ff84a13bf5bfc62f8a6a4ad65b20e13ac4e92164 WHIRLPOOL 3585987db968443527fb6d31f71c110638855e19915679d7a89ce9024c21e1c400fc7e4b1de2ca67b9aaded423e6d0b6552c09b160c4d9bff7aa92606ced36bd
 MISC sbcl-1.0.55-r2.ebuild.orig 6230 SHA256 02574bec1fb07d17dd604daa7c4279a5125d0e9362247eaa2bde4ac55d0db607 SHA512 125165bf61e89a98f4796c792bc9c39dd8caa9595253bda3b2d50af762a5a597438966cbb5faa0d2e37563104b97185c88718be3d2df6a8fdb56af7bfe0d00c5 WHIRLPOOL 5f945702055282b0a989001f39b5ceb4de62ec750902018a3421562098298c405f23c855b2a00dd5a02b25aedfe3a92eab3de13a19de98670f15f2ebe6197a22
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlTNhW4ACgkQoBEVQmGOlx+rVAD/cGHG5cJ2GSYOZ+I3qgdA/RHT
-QDmUHFrsMETkEyPkdiAA/i1OLFaP0jHaZquXCi81ivuVHv3QzRnM3MGmtZB5eIsj
-=j8ud
+iF4EAREIAAYFAlTNyRIACgkQoBEVQmGOlx/jiQD/RUAzqXz3vjUTCK08XN/W1Fut
+8plr05c5I6RvxEuTVeQA/Rtfuwhg/nk/qMkpEnLhaU2XTR69TvBjZhr4ywr0GAHq
+=k1vA
 -----END PGP SIGNATURE-----
