@@ -1,6 +1,6 @@
-# Copyright 1999-2014 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lisp/sbcl/sbcl-1.1.18.ebuild,v 1.5 2014/10/20 14:51:55 grozin Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lisp/sbcl/sbcl-1.1.18.ebuild,v 1.6 2015/02/01 06:34:48 gienah Exp $
 
 EAPI=5
 inherit multilib eutils flag-o-matic pax-utils
@@ -91,6 +91,11 @@ src_prepare() {
 		einfo "Disabling PIE..."
 		epatch "${FILESDIR}"/${PN}-1.1.17-gentoo-fix_nopie_for_hardened_toolchain.patch
 	fi
+
+	# bug #526194
+	sed -e "s@CFLAGS =@CFLAGS = ${CFLAGS}@" \
+		-e "s@LINKFLAGS =@LINKFLAGS = ${LDFLAGS}@" \
+		-i src/runtime/GNUmakefile || die
 
 	cp /usr/share/common-lisp/source/asdf/build/asdf.lisp contrib/asdf/ || die
 
