@@ -10,4 +10,4 @@ RDEPEND=>=dev-lisp/asdf-3.1:= elibc_glibc? ( >=sys-libs/glibc-2.3 || ( <sys-libs
 SLOT=0/1.2.4
 SRC_URI=mirror://sourceforge/sbcl/sbcl-1.2.4-source.tar.bz2 x86? ( mirror://sourceforge/sbcl/sbcl-1.0.58-x86-linux-binary.tar.bz2 ) amd64? ( mirror://sourceforge/sbcl/sbcl-1.2.4-x86-64-linux-binary.tar.bz2 ) ppc? ( mirror://sourceforge/sbcl/sbcl-1.0.28-powerpc-linux-binary.tar.bz2 ) sparc? ( mirror://sourceforge/sbcl/sbcl-1.0.28-sparc-linux-binary.tar.bz2 ) alpha? ( mirror://sourceforge/sbcl/sbcl-1.0.28-alpha-linux-binary.tar.bz2 )
 _eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	flag-o-matic	c263990f1b677b0f0be0a3299f179762	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	pax-utils	dfe060cb70d89757fde5c1ff8405e950	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
-_md5_=aba1de4e63c38c13abd78843c4753795
+_md5_=0ef440bf9365246c1db2fc58ae05b177
